[tool.poetry]
name = "causal_reasoning"
version = "0.1.0"
description = "Package for causal inference under partially observability"
authors = ["danlawand <daniel.lawand@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
networkx = "^3.4.2"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
