[project]
name = "causal_reasoning"
version = "0.0.1"
description = "Package for causal inference under partially observability"
authors = [
    { name="Daniel Lawand", email="daniel.lawand@gmail.com" },
    ]
license = "Apache-2.0"
readme = "README.md"
keywords = [ "causal inference" ]

packages = [
    { include = "causal_reasoning" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
gurobipy = "^12.0.1"
pgmpy = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
