[project]
name = "pici"
version = "0.0.5"
description = "Package for Partially Identifiable Causal Inference"
authors = [
    { name="Daniel Lawand", email="daniel.lawand@gmail.com" },
]

license = "Apache-2.0"
readme = "README.md"
keywords = [ "causal inference" ]

packages = [
    { include = "pici" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
scipy = ">=1.7,<1.14"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
gurobipy = "^12.0.1"
pgmpy = "^1.0.0"
dowhy = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.12.2"
ipykernel = "^6.29.5"

[tool.ruff]
select = ["N", "E", "F", "B", "I"]
fixable = ["ALL"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
